# simple-android-bazel-app

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  android_studio.bazelproject  simple_test_script.sh
app/src/main/: AndroidManifest.xml  BUILD.bazel  cc_lib_wrapper_for_android.bzl
app/src/main/cpp/: jni_dep.cc  jni_dep.h  jni_lib.cc  main.cc  second_jni_lib.cc
app/src/main/java/com/example/android/bazel/: JniLib.java  MainActivity.java  SecondJniLib.java  SomeOtherNonJNIClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/: AndroidManifest.xml  AndroidTestManifest.xml  BUILD.bazel  my_run_adb_rule.bzl  run_ait_with_adb.bzl  run_ait_with_adb.sh
app/src/test/java/com/example/android/bazel/: JniLibTest.java
app/src/test/java/com/example/android/bazel/test/: SimpleInstrumentationTest.java
