"Bazel dependencies"

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(
    name = "rules_android",
    version = "0.5.1",
)

# add via WORKSPACE
#bazel_dep(
#    name = "rules_android_ndk",
#    version = "0.1.2",
#)
