"Bazel dependencies"

bazel_dep(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(
    name = "rules_android",
    version = "0.6.0",
)

android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)

android_sdk_repository_extension.configure(
    path = "/usr/local/google/home/ktimofeev/Android/Sdk",
)

bazel_dep(
    name = "rules_android_ndk",
    version = "0.1.2",
)

android_ndk_repository_extension = use_extension(
    "@rules_android_ndk//:extension.bzl",
    "android_ndk_repository_extension",
)
android_ndk_repository_extension.configure(
    path = "/usr/local/google/home/ktimofeev/Android/Sdk/ndk/25.1.8937393",
)
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")