load("@rules_android//android:rules.bzl", "android_binary", "android_library")
load(":cc_lib_wrapper_for_android.bzl", "cc_lib_wrapper_for_android")

android_library(
    name = "lib_jni",
    srcs = ["java/com/example/android/bazel/JniLib.java"],
    deps = [":jni_lib_wrapped"],
)

android_library(
    name = "lib_second_jni",
    srcs = ["java/com/example/android/bazel/SecondJniLib.java"],
    deps = [":second_jni_lib_wrapped"],
)

android_library(
    name = "lib",
    srcs = [
        "java/com/example/android/bazel/MainActivity.java",
    ],
    custom_package = "com.example.android.bazel",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**/*"]),
    deps = [":lib_jni", ":lib_second_jni"],
)

cc_library(
    name = "cpp_jni_dep",
    srcs = ["cpp/jni_dep.cc"],
    hdrs = ["cpp/jni_dep.h"],
)

cc_binary(
    name = "cpp_main",
    srcs = ["cpp/main.cc"],
    deps = [":cpp_jni_dep"],
)

cc_library(
    name = "second_jni_lib_cc",
    srcs = ["cpp/second_jni_lib.cc"],
)

cc_lib_wrapper_for_android(
    name = "second_jni_lib_wrapped",
    lib_name = "second_jni_lib",
    cc_library_target = ":second_jni_lib_cc"
)

cc_library(
    name = "jni_lib_cc",
    srcs = ["cpp/jni_lib.cc"],
    linkopts = ["-llog"],
    deps = ["cpp_jni_dep"],
)

cc_lib_wrapper_for_android(
    name = "jni_lib_wrapped",
    lib_name = "jni_lib",
    cc_library_target = ":jni_lib_cc"
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [
        ":lib",
    ],
)
