load("@rules_android//android:rules.bzl", "android_binary", "android_library")
load(":cc_lib_wrapper_for_android.bzl", "cc_lib_wrapper_for_android", "android_jni_library")

android_library(
    name = "lib_jni_java",
    srcs = ["java/com/example/android/bazel/JniLib.java"],
    deps = [":jni_lib_target"],
)

android_library(
    name = "lib_second_jni_java",
    srcs = ["java/com/example/android/bazel/SecondJniLib.java"],
    deps = [":second_jni_lib_target"],
)

android_library(
    name = "lib",
    srcs = [
        "java/com/example/android/bazel/MainActivity.java",
    ],
    custom_package = "com.example.android.bazel",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**/*"]),
    deps = [":lib_jni_java", ":lib_second_jni_java"],
)

cc_library(
    name = "cpp_jni_dep",
    srcs = ["cpp/jni_dep.cc"],
    hdrs = ["cpp/jni_dep.h"],
)

cc_binary(
    name = "cpp_main",
    srcs = ["cpp/main.cc"],
    deps = [":cpp_jni_dep"],
)

android_jni_library(
    name = "second_jni_lib_target",
    binary_name = "second_jni_lib",
    srcs = ["cpp/second_jni_lib.cc"],
)

android_jni_library(
    name = "jni_lib_target",
    binary_name = "jni_lib",
    srcs = ["cpp/jni_lib.cc"],
    linkopts = ["-llog"],
    deps = ["cpp_jni_dep"],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [
        ":lib",
    ],
)
