load("@rules_android//android:rules.bzl", "android_binary", "android_library")

android_library(
    name = "lib",
    srcs = [
        "java/com/example/android/bazel/MainActivity.java",
        "java/com/example/android/bazel/SomeOtherNonJNIClass.java",
    ],
    custom_package = "com.example.android.bazel",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**/*"]),
    visibility = ["//visibility:public"],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [
        ":lib",
    ],
    visibility = ["//visibility:public"],
)
