load("@rules_android//android:rules.bzl", "android_binary", "android_library")

android_library(
    name = "simple_test_lib",
    srcs = ["java/com/example/android/bazel/test/SimpleInstrumentationTest.java"],
    deps = [
        "//app/src/main:lib",
        "//app/src/main:lib_jni",
        "@maven//:androidx_test_runner",
        "@maven//:junit_junit",
    ],
)

android_binary(
    name = "simple_test_app",
    manifest = "AndroidTestManifest.xml",
    deps = [":simple_test_lib"],
)
